--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,16 @@
     "url": "https://github.com/myks790/nodejs-study/issues"
   },
   "homepage": "https://github.com/myks790/nodejs-study#readme",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.17.1",
+    "http": "0.0.1-security",
+    "multer": "^1.4.2",
+    "serve-static": "^1.14.1"
+  },
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
