--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-study",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -24,6 +24,7 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.17.1",
     "http": "0.0.1-security",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "serve-static": "^1.14.1"
   },
