--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http": "0.0.1-security",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
+    "pug": "^3.0.0",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
