--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.17.1",
     "http": "0.0.1-security",
-    "mongodb": "^3.5.9",
+    "mongodb": "^3.6.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.0",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0"
   }
