--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-error-handler": "^1.1.0",
@@ -30,7 +31,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
